fix: resolve issue with app screen flickering upon app launch

--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@
   --secondary-color: rgb(200, 200, 200);
   /* --ion-text-color: rgba(13, 13, 13, 1); */
   --ion-text-color: rgb(0, 0, 0, 1);
-  --card-bg-color: rgb(255, 255, 255);
+  --card-bg-color: rgb(247, 247, 247);
   --card-shadow-color: rgb(234, 234, 234);
   --app-border-color: rgba(233, 233, 233, 1);
   --table-row-border-color: rgb(227, 227, 227);
@@ -25,11 +25,11 @@
   --nav-active-tab-color: #3880ff;
   /* --nav-selected-tab-color: #2e004d; */
   --segment-bg-color: rgb(255, 255, 255);
-  --segment-active-color: rgb(183, 183, 183);
+  --segment-active-color: rgb(215, 215, 215);
   --table-dot-icon-color: rgba(71, 71, 71, 0.9);
   --textarea-bg-color: rgb(231, 231, 231);
   --missed-salah-sheet-btn-color: rgb(237, 237, 237);
-  --wreath-color: #545454;
+  --wreath-color: #707070;
   --reasons-bg-color-status-sheet: rgb(241, 241, 241);
   --reasons-bg-active-color-status-sheet: #8acefc;
   --calendar-arrow-btn-color: #b2b2b2;
@@ -56,7 +56,7 @@ body.dark {
   --segment-active-color: rgb(89, 89, 89);
   --nav-active-tab-color: white;
   --table-dot-icon-color: rgba(180, 180, 180, 0.9);
-  --textarea-bg-color: rgba(28, 25, 23, 1);
+  --textarea-bg-color: rgb(38, 38, 38);
   --missed-salah-sheet-btn-color: rgb(50, 50, 50);
   --wreath-color: #bbb;
   --reasons-bg-color-status-sheet: rgb(44, 44, 44);
